--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html">Bryllup<strong>.</strong></a></div>
+				<div class="col-xs-4">
+					<div id="fh5co-logo"><a href="index.html">Bryllup på Kastrupfortet<strong>.</strong></a></div>
 				</div>
-				<div class="col-xs-10 text-right menu-1">
+				<div class="col-xs-8 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Forside</a></li>
 						<li><a href="#fh5co-event">Tidsplan</a></li>
@@ -79,7 +79,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Asger &amp; Tine</h1>
-							<h2>Vi skal giftes!</h2>
+							<h2>Vi skal giftes lørdag d. 20 August 2022!</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 						</div>
 					</div>
@@ -97,6 +97,9 @@
 					<p>Vi glæder os til at se jer, og at I vil være med til at dele denne skønne dag med os.</p>
 					<p>SU. d. 20. Maj 2022</p>
 				</div>
+			</div>
+			<div class="col-xs-offset-2 col-xs-8" >
+				<img src="images/Slovenien.jpg" class="img-responsive img-rounded" >
 			</div>
 		</div>
 	</div>
@@ -116,7 +119,7 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Vielse</h3>
+									<h3>Vielse & reception</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
 										<span>14:30</span>
@@ -127,7 +130,7 @@
 										<span>Lørdag 20</span>
 										<span>August, 2022</span>
 									</div>
-									<p>Vielsen vil blive holdt som en udendørs vielse på Kastrupfortet.</p>
+									<p>Vielsen bliver holdt udendørs på Kastrupfortet efterfulgt af bryllupskage og champagne.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 text-center">
@@ -135,7 +138,7 @@
 									<h3>Middag & Fest</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>18:30 PM</span>
+										<span>18:00 PM</span>
 										<span>04:00 AM</span>
 									</div>
 									<div class="event-col">
@@ -143,7 +146,7 @@
 										<span>Lørdag 20</span>
 										<span>August, 2022</span>
 									</div>
-									<p>Middag og fest vil også blive holdt på Kastrupfortet</p>
+									<p>Middag og fest bliver afholdt på restaurant Kastrupfortet</p>
 								</div>
 							</div>
 						</div>
@@ -159,7 +162,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Kære gæster</h2>
 					<h3>Nedenstående finder I et link til vores ønskeseddel.</h3>
-					<p>Har I spørgsmål eller brug for hjælp til koordinering, kontakt venligst Isa Thyregod. I kan få nummeret fra brudeparret.</p>
+					<p>Har I spørgsmål eller brug for hjælp til koordinering, kontakt venligst Isa Thyregod på 20 85 26 15.</p>
 					<a href="Ønskeliste.pdf" target="_blank" download>Ønskeliste</a>
 				</div>
 			</div>
@@ -171,23 +174,13 @@
 			
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Overnatning & Transport</h2>
+					<h2>Transport & overnatning</h2>
 					<p>Der er både nem mulighed for overnatning og transport tæt på.</p>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-office"></i>
-						</span>
-						<div class="feature-copy">
-							<h3>Hotel</h3>
-							<p>Der er to muligheder for overnatning tæt på. <a href="https://www.radissonhotels.com/en-us/hotels/park-inn-copenhagen-airport?cid=a:se+b:gmb+c:emea+i:local+e:pii+d:nob+h:DKCPHAIR">Park Inn</a> og et <a href="http://www.amagerbedandbreakfast.dk/">Bed & Breakfast</a>. Da vi er tæt på metroen, kan man også nemt komme til flere overnatningsmuligheder.</p>
-						</div>
-					</div>
-
 					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
 							<i class="icon-truck"></i>
@@ -205,6 +198,16 @@
 						<div class="feature-copy">
 							<h3>Offenligt transport</h3>
 							<p>Der er 5 minutters gå gang til Femøren metro st. Herfra, kan man tage til Lufthavnen st. for Regional tog.</p>
+						</div>
+					</div>
+
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-office"></i>
+						</span>
+						<div class="feature-copy">
+							<h3>Hotel</h3>
+							<p>Der er to muligheder for overnatning tæt på. <a href="https://www.radissonhotels.com/en-us/hotels/park-inn-copenhagen-airport?cid=a:se+b:gmb+c:emea+i:local+e:pii+d:nob+h:DKCPHAIR">Park Inn</a> og et <a href="http://www.amagerbedandbreakfast.dk/">Bed & Breakfast</a>. Da vi er tæt på metroen, kan man også nemt komme til flere overnatningsmuligheder.</p>
 						</div>
 					</div>
 
