updated content and changed image saturation

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<ul>
 						<li class="active"><a href="index.html">Forside</a></li>
 						<li><a href="#fh5co-event">Tidsplan</a></li>
-						<li><a href="#fh5co-wishlist">Ønskeliste</a></li>
+						<li><a href="#fh5co-wishlist">Praktiske informationer</a></li>
 						<li><a href="#fh5co-services">Hotel & Transport</a></li>
 						<li><a href="#fh5co-started">Kontakt</a></li>
 					</ul>
@@ -93,9 +93,11 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Kære gæster</h2>
-					<h3>I er inviteret til bryllup d. 20 August 2022 på Kastrupfortet, Kastrup.</h3>
+					<h3>I er inviteret til bryllup d. 20 August 2022 på Kastrupfortet</h3>
+					<p>På denne side kan I finde praktiske informationer, ønskeliste, parkering og transportmuligheder mv.</p>
 					<p>Vi glæder os til at se jer, og at I vil være med til at dele denne skønne dag med os.</p>
 					<p>SU. d. 20. Maj 2022</p>
+					<p>Kærligst Asger og Tine</p>
 				</div>
 			</div>
 			<div class="col-xs-offset-2 col-xs-8" >
@@ -160,9 +162,13 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Kære gæster</h2>
-					<h3>Nedenstående finder I et link til vores ønskeseddel.</h3>
-					<p>Har I spørgsmål eller brug for hjælp til koordinering, kontakt venligst Isa Thyregod på 20 85 26 15.</p>
+					<h2>Praktiske informationer</h2>
+					<h3>Informationer om dagen</h3>
+					<p>Vielse og reception vil foregå udendørs, så vi anbefaler at klæde sig efter vejret. Derudover, er dresscode formel. Arrangementet er for voksne, men børn som skal ammes, er selvfølgelig velkomne.</p>
+					<h3>Toastmaster</h3>
+					<p>Som Toastmaster har vi valgt Åse bonde (Tines moster). Åse vil stå for koordineringen af taler, indslag mv. under middagen. I kan kontakte Åse på aase@nissenbonde.dk eller 21 27 02 89</p>
+					<h3>Ønskeliste</h3>
+					<p>Nedenstående finder I et link til vores ønskeseddel. Har I spørgsmål eller brug for hjælp til koordinering, kontakt venligst Isa Thyregod på 20 85 26 15.</p>
 					<a href="Ønskeliste.pdf" target="_blank" download>Ønskeliste</a>
 				</div>
 			</div>
