rephrased and fixed typos

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<li class="active"><a href="index.html">Forside</a></li>
 						<li><a href="#fh5co-event">Tidsplan</a></li>
 						<li><a href="#fh5co-wishlist">Praktiske informationer</a></li>
-						<li><a href="#fh5co-services">Hotel & Transport</a></li>
+						<li><a href="#fh5co-services">Transport & Hotel</a></li>
 						<li><a href="#fh5co-started">Kontakt</a></li>
 					</ul>
 				</div>
@@ -164,11 +164,11 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Praktiske informationer</h2>
 					<h3>Informationer om dagen</h3>
-					<p>Vielse og reception vil foregå udendørs, så vi anbefaler at klæde sig efter vejret. Derudover, er dresscode formel. Arrangementet er for voksne, men børn som skal ammes, er selvfølgelig velkomne.</p>
+					<p>Vielse og reception vil foregå udendørs, så vi anbefaler at klæde sig efter vejret, men selvfølgelig også efter anledningen. Arrangementet er for voksne, men børn som skal ammes, er selvfølgelig velkomne.</p>
 					<h3>Toastmaster</h3>
-					<p>Som Toastmaster har vi valgt Åse bonde (Tines moster). Åse vil stå for koordineringen af taler, indslag mv. under middagen. I kan kontakte Åse på aase@nissenbonde.dk eller 21 27 02 89</p>
+					<p>Som Toastmaster har vi valgt Åse Bonde (Tines moster). Åse vil stå for koordineringen af taler, indslag mv. under middagen. I kan kontakte Åse på aase@nissenbonde.dk eller 21 27 02 89</p>
 					<h3>Ønskeliste</h3>
-					<p>Nedenstående finder I et link til vores ønskeseddel. Har I spørgsmål eller brug for hjælp til koordinering, kontakt venligst Isa Thyregod på 20 85 26 15.</p>
+					<p>Nedenstående finder I et link til vores ønskeseddel. Har I spørgsmål eller brug for hjælp til koordinering, kontakt venligst Isa Thyregod (Asgers søster) på 20 85 26 15.</p>
 					<a href="Ønskeliste.pdf" target="_blank" download>Ønskeliste</a>
 				</div>
 			</div>
