--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-4">
-					<div id="fh5co-logo"><a href="index.html">Bryllup på Kastrupfortet<strong>.</strong></a></div>
+					<div class="hidden-sm hidden-md hidden-lg" id="fh5co-logo"><a href="index.html">Bryllup<strong></strong></a></div>
+					<div class="hidden-xs" id="fh5co-logo"><a href="index.html">Bryllup på Kastrupfortet<strong></strong></a></div>
 				</div>
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
@@ -71,7 +72,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/AT.jpeg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/AT.jpeg); background-position: center;">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -164,9 +165,9 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Praktiske informationer</h2>
 					<h3>Informationer om dagen</h3>
-					<p>Vielse og reception vil foregå udendørs, så vi anbefaler at klæde sig efter vejret, men selvfølgelig også efter anledningen. Arrangementet er for voksne, men børn som skal ammes, er selvfølgelig velkomne.</p>
+					<p>Vielse og reception vil foregå udendørs, så vi anbefaler at klæde sig på efter vejret, men selvfølgelig også efter anledningen. Arrangementet er for voksne, men børn som skal ammes, er selvfølgelig velkomne.</p>
 					<h3>Toastmaster</h3>
-					<p>Som Toastmaster har vi valgt Åse Bonde (Tines moster). Åse vil stå for koordineringen af taler, indslag mv. under middagen. I kan kontakte Åse på aase@nissenbonde.dk eller 21 27 02 89</p>
+					<p>Som toastmaster har vi valgt Åse Bonde (Tines moster). Åse vil stå for koordineringen af taler, indslag mv. under middagen. I kan kontakte Åse på aase@nissenbonde.dk eller 21 27 02 89</p>
 					<h3>Ønskeliste</h3>
 					<p>Nedenstående finder I et link til vores ønskeseddel. Har I spørgsmål eller brug for hjælp til koordinering, kontakt venligst Isa Thyregod (Asgers søster) på 20 85 26 15.</p>
 					<a href="Ønskeliste.pdf" target="_blank" download>Ønskeliste</a>
@@ -203,7 +204,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>Offenligt transport</h3>
-							<p>Der er 5 minutters gå gang til Femøren metro st. Herfra, kan man tage til Lufthavnen st. for Regional tog.</p>
+							<p>Der er 5 minutters gang til Femøren metro st. Herfra, kan man tage til Lufthavnen st. for Regional tog.</p>
 						</div>
 					</div>
 
@@ -234,9 +235,9 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Deltager du/I?</h2>
-					<p style="color:white !important">Informer venligst brudeparret på besked. Dette kan gøres på 25 54 17 59 (Asger) eller 24 64 23 27 (Tine)</p>
-					<p style="color:white !important">Dette skal gøres senest d. 20 Maj 2022.</p>
-					<p style="color:white !important">Hvis du har nogen yderligere spørgsmål, skal du/I også være mere end velkomne til at kontakte os.</p>
+					<p style="color:white !important">Vi håber du/I kan komme og fejre dagen med os. Du/I kan give besked til enten Asger på 25 54 17 59 eller Tine på 24 64 23 27</p>
+					<p style="color:white !important">S.U. senest d. 20 Maj 2022.</p>
+					<p style="color:white !important">Hvis du/I har nogen yderligere spørgsmål, skal du/I også være mere end velkomne til at kontakte os.</p>
 					<p style="color:white !important">Vi glæder os til at se jer.</p>
 				</div>
 			</div>
