--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Asger &amp; Tine</h1>
-							<h2>Vi skal giftes lørdag d. 20 August 2022!</h2>
+							<h2>Vi skal giftes lørdag d. 20. august 2022!</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 						</div>
 					</div>
@@ -94,10 +94,10 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Kære gæster</h2>
-					<h3>I er inviteret til bryllup d. 20 August 2022 på Kastrupfortet</h3>
+					<h3>I er inviteret til bryllup d. 20. august 2022 på Kastrupfortet</h3>
 					<p>På denne side kan I finde praktiske informationer, ønskeliste, parkering og transportmuligheder mv.</p>
 					<p>Vi glæder os til at se jer, og at I vil være med til at dele denne skønne dag med os.</p>
-					<p>SU. d. 20. Maj 2022</p>
+					<p>SU. d. 20. maj 2022</p>
 					<p>Kærligst Asger og Tine</p>
 				</div>
 			</div>
@@ -236,7 +236,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Deltager du/I?</h2>
 					<p style="color:white !important">Vi håber du/I kan komme og fejre dagen med os. Du/I kan give besked til enten Asger på 25 54 17 59 eller Tine på 24 64 23 27</p>
-					<p style="color:white !important">S.U. senest d. 20 Maj 2022.</p>
+					<p style="color:white !important">S.U. senest d. 20. maj 2022.</p>
 					<p style="color:white !important">Hvis du/I har nogen yderligere spørgsmål, skal du/I også være mere end velkomne til at kontakte os.</p>
 					<p style="color:white !important">Vi glæder os til at se jer.</p>
 				</div>
