Updated readme and index

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					<h3>Informationer om dagen</h3>
 					<p>Vielse og reception vil foregå udendørs, så vi anbefaler at klæde sig på efter vejret, men selvfølgelig også efter anledningen. Arrangementet er for voksne, men børn som skal ammes, er selvfølgelig velkomne.</p>
 					<h3>Toastmaster</h3>
-					<p>Som toastmaster har vi valgt Åse Bonde (Tines moster). Åse vil stå for koordineringen af taler, indslag mv. under middagen. I kan kontakte Åse på aase@nissenbonde.dk eller 21 27 02 89</p>
+					<p>Som toastmaster har vi valgt Åse Bonde (Tines moster). Åse vil stå for koordineringen af taler, indslag mv. under middagen. Der vil ikke være projektor til rådighed, så det vil selv skulle medbringes efter behov. I kan kontakte Åse på aase@nissenbonde.dk eller 21 27 02 89</p>
 					<h3>Ønskeliste</h3>
 					<p>Nedenstående finder I et link til vores ønskeseddel. Har I spørgsmål eller brug for hjælp til koordinering, kontakt venligst Isa Thyregod (Asgers søster) på 20 85 26 15.</p>
 					<a href="Ønskeliste.pdf" target="_blank" download>Ønskeliste</a>
