Updated navbar and description

--- a/index.html
+++ b/index.html
@@ -52,7 +52,31 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
+		<nav class="navbar fh5co-nav" role="navigation">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-8">
+						<!--<div class="hidden-sm hidden-md hidden-lg" id="fh5co-logo"><a href="index.html">Bryllup<strong></strong></a></div>-->
+						<div class="" id="fh5co-logo"><a href="index.html">Bryllup på Kastrupfortet<strong></strong></a></div>
+					</div>
+					<div id="main col-xs-4">
+						<button type="button" class="openbtn pull-right" onclick="openNav()">&#9776; Menu</button>
+					</div>
+
+					<div id="mySidebar" class="sidebar">
+						<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+						<a href="index.html">Forside</a>
+						<a href="#fh5co-event">Tidsplan</a>
+						<a href="#fh5co-wishlist">Praktiske informationer</a>
+						<a href="#fh5co-services">Transport & Hotel</a>
+						<a href="#fh5co-started">Kontakt</a>
+					</div>
+				</div>
+			</div>
+		</nav>
+
+		<!--
+	<nav class="navbar fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-4">
@@ -70,7 +94,7 @@
 				</div>
 			</div>
 		</div>
-	</nav>
+	</nav>-->
 
 	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/AT.jpeg); background-position: center;">
 		<div class="overlay"></div>
@@ -194,7 +218,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>Parkering</h3>
-							<p>Der er to muligheder for parkering. Kastrupfortet anbefaler at parkere ude på Amager Strandvej, men fortæller at det også er "muligt" at parkere på Kastrupfortet. Dette står dog for egen regning.</p>
+							<p>Der er to muligheder for parkering. Kastrupfortet anbefaler at parkere ude på Amager Strandvej, men fortæller at det også er "muligt" at parkere på Kastrupfortet. Dette står for egen regning.</p>
 						</div>
 					</div>
 
@@ -237,6 +261,7 @@
 					<h2>Deltager du/I?</h2>
 					<p style="color:white !important">Vi håber du/I kan komme og fejre dagen med os. Du/I kan give besked til enten Asger på 25 54 17 59 eller Tine på 24 64 23 27</p>
 					<p style="color:white !important">S.U. senest d. 20. maj 2022.</p>
+					<p style="color:white !important">Der vil være mulighed for vegetarisk alternativ til middagen, hvis dette ønskes. I bedes dog informere os om dette.</p>
 					<p style="color:white !important">Hvis du/I har nogen yderligere spørgsmål, skal du/I også være mere end velkomne til at kontakte os.</p>
 					<p style="color:white !important">Vi glæder os til at se jer.</p>
 				</div>
