Fixed alligning in top-menu on phones

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 		<nav class="navbar fh5co-nav" role="navigation">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-8">
-						<!--<div class="hidden-sm hidden-md hidden-lg" id="fh5co-logo"><a href="index.html">Bryllup<strong></strong></a></div>-->
-						<div class="" id="fh5co-logo"><a href="index.html">Bryllup på Kastrupfortet<strong></strong></a></div>
+					<div class="col-xs-7">
+						<div class="hidden-sm hidden-md hidden-lg" id="fh5co-logo"><a href="index.html">Bryllup<strong></strong></a></div>
+						<div class="hidden-xs" id="fh5co-logo"><a href="index.html">Bryllup på Kastrupfortet<strong></strong></a></div>
 					</div>
 					<div id="main col-xs-4">
 						<button type="button" class="openbtn pull-right" onclick="openNav()">&#9776; Menu</button>
